--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "express-validator": "^6.1.1",
     "fs": "^0.0.1-security",
@@ -18,6 +20,7 @@
     "multer": "^1.4.1",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
